# hydrogen-deps

./: .appveyor.yml  .gitmodules  CMakeLists.txt
sources/aften-0.0.8/libaften/: cpu_caps.h
sources/db-18.1.40/src/berkeleydb-stamp/: berkeleydb-source_dirinfo.txt
sources/db-18.1.40/tmp/: berkeleydb-cfgcmd.txt  berkeleydb-mkdirs.cmake
